plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.3.1'
}

apply from :'config.gradle'

group 'com.xiaobaicai'
version "$rootProject.ext.plugin.version"
apply plugin: 'java'
sourceCompatibility = 1.8
jar.enabled = true


repositories {
    mavenCentral()
}

dependencies {
    // 全局依赖
    annotationProcessor 'org.projectlombok:lombok:1.18.2'
    compileOnly 'org.projectlombok:lombok:1.18.2'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
    testCompileOnly 'org.projectlombok:lombok:1.18.2'
    implementation group: 'cn.hutool', name: 'hutool-all', version: '5.7.19'
    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.79'
    // 单测
    testCompileOnly 'junit:junit:4.12'
    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.0-M4")
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2021.1.3'
    plugins = ['java']
    type.set("IU")
    localPath.set("/Applications/IntelliJ IDEA.app")
}

patchPluginXml {
    patchPluginXml {
        sinceBuild.set("201.1")
        untilBuild.set("")
    }
}

publishPlugin{
    token=System.getenv("pluginToken")
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}